Upchore: updates to match master

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -58,15 +58,15 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/alert": "^7.0.2",
-    "@uqds/body": "^4.0.0",
+    "@uqds/alert": "^7.0.6",
+    "@uqds/body": "^4.0.2",
     "@uqds/button": "^4.0.0",
     "@uqds/card": "^4.0.1",
     "@uqds/core": "^5.0.0",
     "@uqds/hero": "^7.0.0",
-    "@uqds/icon": "^4.0.1",
-    "@uqds/layout": "6.0.0-alpha.0",
-    "@uqds/loading-spinner": "^4.0.1",
+    "@uqds/icon": "^4.0.3",
+    "@uqds/layout": "^7.0.0",
+    "@uqds/loading-spinner": "^4.0.3",
     "@uqds/pagination": "^4.0.1",
     "@uqds/pane": "^4.0.0",
     "@uqds/table": "^4.0.0",
